--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>    
     <div class="product_cost">
-        <button class="button" onclick="">Использовать купон на 20%</button>
+        <button id="discountButton">Использовать купон на 20%</button>
         <div class="total">
             <p class="total_title">Итого:</p>
             <p id="totalValue"></p>
